SecurityManager.getPermissions() checkpoint still need to update calls to SecurityPolicy methods